<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnableNetworkLocationActivity">

    <LinearLayout
        style="@style/width_match_parent_max_400"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp"
        android:layout_gravity="top|center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/not_title"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="160sp"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:background="@drawable/linear_layout_background"
            android:contentDescription="@string/not_alt"
            android:padding="5sp"
            android:scaleType="fitCenter"
            android:src="@drawable/notificationaccess" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:background="@drawable/linear_layout_background"
            android:padding="5sp"
            android:text="@string/not_explanation" />

        <Button
            android:id="@+id/not_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5sp"
            android:onClick="onOpenNotificationSettings"
            android:padding="5sp"
            android:text="@string/not_opensettings"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView>